# projet-jeu

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile:Zone.Identifier  Projet royal war.pdf:Zone.Identifier  readme  readme.md  readme:Zone.Identifier  test.json  test2.json  tree.txt
cmake/: CodeCoverage.cmake  GenerateDiaHeader.cmake
rapport/: Projet royal war.odt  Projet royal war.odtZone.Identifier  Projet royal war.pdfZone.Identifier  ProjetClass.dia  ProjetClass.dia.autosave  ProjetClassVersion2.dia  ProjetClassVersion3.dia  Rapport.odt
res/: bat2.png:Zone.Identifier
res/Scripts/actions_patterns/: PatternCross3.csv  PatternDiamond2.csv
res/Scripts/maps/: Beach.csv  Home.csv  Pool.csv  WorldTest.csv
res/Scripts/scripts/: StandardScenario.bhv  TreeAI.bhv
res/Scripts/tables/: Actors.csv  Patterns.csv  Scripts.csv  Worlds.csv
res/actions_patterns/: PatternCrossSimple.csv  PatternSquare1.csv  PatternSquare3.csv
res/maps/: Beach - Beach.csv:Zone.Identifier  OtherWorld.csv  WorldWithRiver.csv
res/scripts/: DeepRed.bhv  MNK.bhv  Regle.bhv
res/tables/: Actions.csv  LaunchArgs.csv  Managers.csv  NetMessage.csv  Patterns.csv  Scripts.csv  Worlds.csv
res/texture/: 178872__hanbaal__bow.wav:Zone.Identifier  CyanKeep2.png:Zone.Identifier  CyanRessource2.png:Zone.Identifier  RedRessource2.png:Zone.Identifier  WarShip.png:Zone.Identifier  bat.png:Zone.Identifier  bat2.png:Zone.Identifier  beach.png:Zone.Identifier  cliff11.png:Zone.Identifier  cliff12.png:Zone.Identifier  cliff13.png:Zone.Identifier  cliff23.png:Zone.Identifier  cliff32.png:Zone.Identifier  cliff33.png:Zone.Identifier  cliff4.png:Zone.Identifier  cliff5.png:Zone.Identifier  cliff6.png:Zone.Identifier  cliff7.png:Zone.Identifier  forest.png:Zone.Identifier  grass2.png:Zone.Identifier  mau.png:Zone.Identifier  mau2.png:Zone.Identifier  redKeep2.png:Zone.Identifier  stone.png:Zone.Identifier  stone3.png:Zone.Identifier  way.png:Zone.Identifier
src/: ai.dia  ai.dia.autosave  client.dia  dia2code  engine.dia  engine.dia.autosave  render.dia  render.dia.autosave  server.dia  state.dia  state.dia.autosave  state.dia.autosave.autosave  statee.dia
src/client/: CMakeCache.txt  CMakeLists.txt  main.cpp
src/client/BoardSnapshot/: ACTOR_MGR::0.csv  ACTOR_MGR::1.csv  ACTOR_MGR::2.csv  ACTOR_MGR::3.csv  (+3 more)
src/server/: CMakeLists.txt  main.cpp
src/shared/: CMakeLists.txt  Diagramme1.dia  dia2code  state.dia
test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
test/client/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_client_dummy.cpp
test/shared/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_shared_dummy.cpp
(+118 files in other folders)
